--- a/styles/src.css
+++ b/styles/src.css
@@ -22,6 +22,19 @@
   font-style: normal;
 }
 
+body::-webkit-scrollbar {
+  display: none;
+}
+
+body:has(#splash-container.hidden)::-webkit-scrollbar {
+  @apply block w-3;
+}
+body:has(#splash-container.hidden)::-webkit-scrollbar-thumb {
+  @apply bg-light-primary-1 dark:bg-dark-primary-1;
+  @apply border-2 border-light-primary-2 dark:border-dark-primary-2;
+  @apply rounded-xl;
+}
+
 body {
   @apply bg-light-bg-1 text-light-text-1;
   @apply dark:bg-dark-bg-1 dark:text-dark-text-1;
