--- a/styles/globals.css
+++ b/styles/globals.css
@@ -529,8 +529,16 @@ video {
   z-index: 50;
 }
 
+.order-last {
+  order: 9999;
+}
+
 .col-span-2 {
   grid-column: span 2 / span 2;
+}
+
+.col-span-5 {
+  grid-column: span 5 / span 5;
 }
 
 .my-10 {
@@ -543,12 +551,29 @@ video {
   margin-bottom: 25px;
 }
 
+.my-20 {
+  margin-top: 5rem;
+  margin-bottom: 5rem;
+}
+
 .mb-7 {
   margin-bottom: 1.75rem;
 }
 
+.mt-20 {
+  margin-top: 5rem;
+}
+
+.mt-5 {
+  margin-top: 1.25rem;
+}
+
 .mt-7 {
   margin-top: 1.75rem;
+}
+
+.mt-14 {
+  margin-top: 3.5rem;
 }
 
 .inline-block {
@@ -595,6 +620,10 @@ video {
   max-height: 0px;
 }
 
+.max-h-\[500px\] {
+  max-height: 500px;
+}
+
 .w-0 {
   width: 0px;
 }
@@ -637,6 +666,10 @@ video {
   grid-template-columns: repeat(2, minmax(0, 1fr));
 }
 
+.grid-cols-5 {
+  grid-template-columns: repeat(5, minmax(0, 1fr));
+}
+
 .flex-col {
   flex-direction: column;
 }
@@ -661,8 +694,17 @@ video {
   justify-content: space-between;
 }
 
+.gap-10 {
+  gap: 2.5rem;
+}
+
 .gap-14 {
   gap: 3.5rem;
+}
+
+.gap-x-10 {
+  -moz-column-gap: 2.5rem;
+       column-gap: 2.5rem;
 }
 
 .gap-x-16 {
@@ -683,8 +725,26 @@ video {
   row-gap: 1rem;
 }
 
+.gap-y-5 {
+  row-gap: 1.25rem;
+}
+
 .gap-y-6 {
   row-gap: 1.5rem;
+}
+
+.gap-y-\[100px\] {
+  row-gap: 100px;
+}
+
+.gap-x-5 {
+  -moz-column-gap: 1.25rem;
+       column-gap: 1.25rem;
+}
+
+.gap-x-3 {
+  -moz-column-gap: 0.75rem;
+       column-gap: 0.75rem;
 }
 
 .overflow-hidden {
@@ -695,9 +755,61 @@ video {
   border-radius: 9999px;
 }
 
+.rounded {
+  border-radius: 0.25rem;
+}
+
+.rounded-xl {
+  border-radius: 0.75rem;
+}
+
+.rounded-3xl {
+  border-radius: 1.5rem;
+}
+
+.bg-dark-primary-1 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(150 242 215 / var(--tw-bg-opacity));
+}
+
 .bg-light-bg-2 {
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+}
+
+.bg-dark-container-1 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(30 30 30 / var(--tw-bg-opacity));
+}
+
+.bg-dark-container-2 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(37 37 37 / var(--tw-bg-opacity));
+}
+
+.bg-dark-container-3 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(46 46 46 / var(--tw-bg-opacity));
+}
+
+.bg-dark-container-4 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(241 243 245 / var(--tw-bg-opacity));
+}
+
+.bg-light-container-1 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+}
+
+.bg-light-container-2 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(248 249 250 / var(--tw-bg-opacity));
+}
+
+.bg-light-container-4 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(222 226 230 / var(--tw-bg-opacity));
 }
 
 .object-contain {
@@ -709,8 +821,39 @@ video {
   padding: 0px;
 }
 
+.p-4 {
+  padding: 1rem;
+}
+
+.p-2 {
+  padding: 0.5rem;
+}
+
+.p-1 {
+  padding: 0.25rem;
+}
+
+.px-2 {
+  padding-left: 0.5rem;
+  padding-right: 0.5rem;
+}
+
+.py-1 {
+  padding-top: 0.25rem;
+  padding-bottom: 0.25rem;
+}
+
+.px-3 {
+  padding-left: 0.75rem;
+  padding-right: 0.75rem;
+}
+
 .pt-12 {
   padding-top: 3rem;
+}
+
+.pt-5 {
+  padding-top: 1.25rem;
 }
 
 .text-center {
@@ -730,6 +873,11 @@ video {
   line-height: 2rem;
 }
 
+.text-4xl {
+  font-size: 2.25rem;
+  line-height: 2.5rem;
+}
+
 .text-5xl {
   font-size: 3rem;
   line-height: 1;
@@ -737,6 +885,11 @@ video {
 
 .text-6xl {
   font-size: 3.75rem;
+  line-height: 1;
+}
+
+.text-7xl {
+  font-size: 4.5rem;
   line-height: 1;
 }
 
@@ -751,6 +904,11 @@ video {
 
 .font-semibold {
   font-weight: 600;
+}
+
+.text-dark-bg-1 {
+  --tw-text-opacity: 1;
+  color: rgb(18 18 18 / var(--tw-text-opacity));
 }
 
 .text-light-primary-1 {
@@ -823,6 +981,36 @@ video {
 
 body::-webkit-scrollbar {
   display: none;
+}
+
+body:has(#splash-containerbody::-webkit-scrollbar)::-webkit-scrollbar {
+  display: block;
+  width: 0.75rem;
+}
+
+body:has(#splash-containerbody::-webkit-scrollbar)::-webkit-scrollbar-thumb {
+  --tw-bg-opacity: 1;
+  background-color: rgb(18 184 134 / var(--tw-bg-opacity));
+}
+
+.dark body:has(#splash-containerbody::-webkit-scrollbar)::-webkit-scrollbar-thumb {
+  --tw-bg-opacity: 1;
+  background-color: rgb(150 242 215 / var(--tw-bg-opacity));
+}
+
+body:has(#splash-containerbody::-webkit-scrollbar)::-webkit-scrollbar-thumb {
+  border-width: 2px;
+  --tw-border-opacity: 1;
+  border-color: rgb(32 201 151 / var(--tw-border-opacity));
+}
+
+.dark body:has(#splash-containerbody::-webkit-scrollbar)::-webkit-scrollbar-thumb {
+  --tw-border-opacity: 1;
+  border-color: rgb(99 230 190 / var(--tw-border-opacity));
+}
+
+body:has(#splash-containerbody::-webkit-scrollbar)::-webkit-scrollbar-thumb {
+  border-radius: 0.75rem;
 }
 
 body:has(#splash-container.hidden)::-webkit-scrollbar {
@@ -932,9 +1120,34 @@ body {
   background-color: rgb(233 236 239 / var(--tw-bg-opacity));
 }
 
+.dark .dark\:border-dark-border-4 {
+  --tw-border-opacity: 1;
+  border-color: rgb(42 42 42 / var(--tw-border-opacity));
+}
+
 .dark .dark\:bg-dark-bg-2 {
   --tw-bg-opacity: 1;
   background-color: rgb(22 21 21 / var(--tw-bg-opacity));
+}
+
+.dark .dark\:bg-dark-container-1 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(30 30 30 / var(--tw-bg-opacity));
+}
+
+.dark .dark\:bg-dark-container-3 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(46 46 46 / var(--tw-bg-opacity));
+}
+
+.dark .dark\:bg-dark-primary-1 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(150 242 215 / var(--tw-bg-opacity));
+}
+
+.dark .dark\:bg-dark-primary-2 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(99 230 190 / var(--tw-bg-opacity));
 }
 
 .dark .dark\:text-dark-primary-1 {
@@ -967,6 +1180,14 @@ body {
     grid-column: span 1 / span 1;
   }
 
+  .md\:col-span-2 {
+    grid-column: span 2 / span 2;
+  }
+
+  .md\:col-span-3 {
+    grid-column: span 3 / span 3;
+  }
+
   .md\:my-0 {
     margin-top: 0px;
     margin-bottom: 0px;
@@ -983,6 +1204,10 @@ body {
 
   .md\:max-h-full {
     max-height: 100%;
+  }
+
+  .md\:w-\[80\%\] {
+    width: 80%;
   }
 
   .md\:flex-row {
@@ -1004,6 +1229,10 @@ body {
   .md\:gap-x-12 {
     -moz-column-gap: 3rem;
          column-gap: 3rem;
+  }
+
+  .md\:gap-y-\[200px\] {
+    row-gap: 200px;
   }
 
   .md\:text-7xl {
