--- a/styles/globals.css
+++ b/styles/globals.css
@@ -537,26 +537,6 @@ video {
   position: relative;
 }
 
-.top-0 {
-  top: 0px;
-}
-
-.left-0 {
-  left: 0px;
-}
-
-.left-4 {
-  left: 1rem;
-}
-
-.left-2 {
-  left: 0.5rem;
-}
-
-.-left-2 {
-  left: -0.5rem;
-}
-
 .-left-3 {
   left: -0.75rem;
 }
@@ -565,16 +545,12 @@ video {
   top: 0.75rem;
 }
 
-.z-50 {
-  z-index: 50;
-}
-
-.z-10 {
-  z-index: 10;
-}
-
 .z-20 {
   z-index: 20;
+}
+
+.z-50 {
+  z-index: 50;
 }
 
 .order-last {
@@ -599,8 +575,8 @@ video {
   margin-bottom: 25px;
 }
 
-.mb-5 {
-  margin-bottom: 1.25rem;
+.mb-10 {
+  margin-bottom: 2.5rem;
 }
 
 .mb-7 {
@@ -619,8 +595,8 @@ video {
   margin-top: 1.75rem;
 }
 
-.mb-10 {
-  margin-bottom: 2.5rem;
+.mt-20 {
+  margin-top: 5rem;
 }
 
 .inline-block {
@@ -719,11 +695,6 @@ video {
   cursor: pointer;
 }
 
-.columns-3 {
-  -moz-columns: 3;
-       columns: 3;
-}
-
 .columns-2 {
   -moz-columns: 2;
        columns: 2;
@@ -815,20 +786,8 @@ video {
   border-radius: 9999px;
 }
 
-.rounded-xl {
-  border-radius: 0.75rem;
-}
-
 .rounded-lg {
   border-radius: 0.5rem;
-}
-
-.rounded {
-  border-radius: 0.25rem;
-}
-
-.rounded-sm {
-  border-radius: 0.125rem;
 }
 
 .bg-dark-primary-1 {
@@ -846,11 +805,6 @@ video {
   background-color: rgb(222 226 230 / var(--tw-bg-opacity));
 }
 
-.bg-light-container-2 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(248 249 250 / var(--tw-bg-opacity));
-}
-
 .object-contain {
   -o-object-fit: contain;
      object-fit: contain;
@@ -860,12 +814,9 @@ video {
   padding: 0px;
 }
 
-.p-2 {
-  padding: 0.5rem;
-}
-
-.p-1 {
-  padding: 0.25rem;
+.px-2 {
+  padding-left: 0.5rem;
+  padding-right: 0.5rem;
 }
 
 .px-3 {
@@ -873,29 +824,9 @@ video {
   padding-right: 0.75rem;
 }
 
-.px-2 {
-  padding-left: 0.5rem;
-  padding-right: 0.5rem;
-}
-
-.py-1 {
-  padding-top: 0.25rem;
-  padding-bottom: 0.25rem;
-}
-
-.py-0 {
-  padding-top: 0px;
-  padding-bottom: 0px;
-}
-
 .py-\[2px\] {
   padding-top: 2px;
   padding-bottom: 2px;
-}
-
-.px-1 {
-  padding-left: 0.25rem;
-  padding-right: 0.25rem;
 }
 
 .pt-12 {
@@ -946,11 +877,6 @@ video {
 .text-lg {
   font-size: 1.125rem;
   line-height: 1.75rem;
-}
-
-.text-sm {
-  font-size: 0.875rem;
-  line-height: 1.25rem;
 }
 
 .text-xs {
@@ -1187,28 +1113,13 @@ body {
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
-.hover\:visible:hover {
-  visibility: visible;
-}
-
 .hover\:z-10:hover {
   z-index: 10;
-}
-
-.hover\:scale-\[1\.25\]:hover {
-  --tw-scale-x: 1.25;
-  --tw-scale-y: 1.25;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
 .hover\:bg-light-container-3:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(233 236 239 / var(--tw-bg-opacity));
-}
-
-.hover\:before\:content-\[\'\$\{tech\.label\}\'\]:hover::before {
-  --tw-content: '${tech.label}';
-  content: var(--tw-content);
 }
 
 .group:hover .group-hover\:visible {
@@ -1221,27 +1132,19 @@ body {
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
-.peer:hover ~ .peer-hover\:visible {
-  visibility: visible;
-}
-
-.peer:hover ~ .peer-hover\:block {
-  display: block;
-}
-
 .dark .dark\:bg-dark-bg-2 {
   --tw-bg-opacity: 1;
   background-color: rgb(22 21 21 / var(--tw-bg-opacity));
 }
 
-.dark .dark\:bg-dark-container-3 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(46 46 46 / var(--tw-bg-opacity));
-}
-
 .dark .dark\:bg-dark-container-2 {
   --tw-bg-opacity: 1;
   background-color: rgb(37 37 37 / var(--tw-bg-opacity));
+}
+
+.dark .dark\:bg-dark-container-3 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(46 46 46 / var(--tw-bg-opacity));
 }
 
 .dark .dark\:text-dark-primary-1 {
@@ -1346,6 +1249,10 @@ body {
     row-gap: 200px;
   }
 
+  .md\:gap-y-\[150px\] {
+    row-gap: 150px;
+  }
+
   .md\:text-7xl {
     font-size: 4.5rem;
     line-height: 1;
@@ -1362,21 +1269,6 @@ body {
 @media (min-width: 1280px) {
   .xl\:w-\[1036px\] {
     width: 1036px;
-  }
-
-  .xl\:columns-7 {
-    -moz-columns: 7;
-         columns: 7;
-  }
-
-  .xl\:columns-8 {
-    -moz-columns: 8;
-         columns: 8;
-  }
-
-  .xl\:columns-9 {
-    -moz-columns: 9;
-         columns: 9;
   }
 
   .xl\:columns-6 {
