--- a/styles/globals.css
+++ b/styles/globals.css
@@ -707,6 +707,10 @@ video {
   cursor: pointer;
 }
 
+.cursor-default {
+  cursor: default;
+}
+
 .select-none {
   -webkit-user-select: none;
      -moz-user-select: none;
