--- a/styles/globals.css
+++ b/styles/globals.css
@@ -615,6 +615,10 @@ video {
   display: flex;
 }
 
+.\!flex {
+  display: flex !important;
+}
+
 .grid {
   display: grid;
 }
@@ -641,6 +645,26 @@ video {
 
 .h-full {
   height: 100%;
+}
+
+.h-5 {
+  height: 1.25rem;
+}
+
+.h-0 {
+  height: 0px;
+}
+
+.h-4 {
+  height: 1rem;
+}
+
+.h-1 {
+  height: 0.25rem;
+}
+
+.h-0\.5 {
+  height: 0.125rem;
 }
 
 .\!max-h-\[1000px\] {
@@ -687,6 +711,22 @@ video {
   width: 100%;
 }
 
+.w-5 {
+  width: 1.25rem;
+}
+
+.w-4 {
+  width: 1rem;
+}
+
+.w-1 {
+  width: 0.25rem;
+}
+
+.w-7 {
+  width: 1.75rem;
+}
+
 .basis-full {
   flex-basis: 100%;
 }
@@ -703,18 +743,18 @@ video {
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
-.cursor-pointer {
-  cursor: pointer;
+.scale-\[10\] {
+  --tw-scale-x: 10;
+  --tw-scale-y: 10;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
 .cursor-default {
   cursor: default;
 }
 
-.select-none {
-  -webkit-user-select: none;
-     -moz-user-select: none;
-          user-select: none;
+.cursor-pointer {
+  cursor: pointer;
 }
 
 .columns-3 {
@@ -774,6 +814,10 @@ video {
   gap: 1.75rem;
 }
 
+.gap-2 {
+  gap: 0.5rem;
+}
+
 .gap-x-1 {
   -moz-column-gap: 0.25rem;
        column-gap: 0.25rem;
@@ -809,12 +853,16 @@ video {
   row-gap: 1.25rem;
 }
 
+.gap-y-\[100px\] {
+  row-gap: 100px;
+}
+
 .gap-y-6 {
   row-gap: 1.5rem;
 }
 
-.gap-y-\[100px\] {
-  row-gap: 100px;
+.gap-y-3 {
+  row-gap: 0.75rem;
 }
 
 .overflow-hidden {
@@ -837,6 +885,10 @@ video {
   border-radius: 0.75rem;
 }
 
+.rounded-md {
+  border-radius: 0.375rem;
+}
+
 .bg-dark-primary-1 {
   --tw-bg-opacity: 1;
   background-color: rgb(150 242 215 / var(--tw-bg-opacity));
@@ -855,6 +907,11 @@ video {
 .bg-light-container-4 {
   --tw-bg-opacity: 1;
   background-color: rgb(222 226 230 / var(--tw-bg-opacity));
+}
+
+.bg-white {
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
 
 .stroke-\[2\.5\] {
@@ -1187,54 +1244,6 @@ body {
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
-.selection\:bg-none *::-moz-selection {
-  background-image: none;
-}
-
-.selection\:bg-none *::selection {
-  background-image: none;
-}
-
-.selection\:text-transparent *::-moz-selection {
-  color: transparent;
-}
-
-.selection\:text-transparent *::selection {
-  color: transparent;
-}
-
-.selection\:text-\[none\] *::-moz-selection {
-  color: none;
-}
-
-.selection\:text-\[none\] *::selection {
-  color: none;
-}
-
-.selection\:bg-none::-moz-selection {
-  background-image: none;
-}
-
-.selection\:bg-none::selection {
-  background-image: none;
-}
-
-.selection\:text-transparent::-moz-selection {
-  color: transparent;
-}
-
-.selection\:text-transparent::selection {
-  color: transparent;
-}
-
-.selection\:text-\[none\]::-moz-selection {
-  color: none;
-}
-
-.selection\:text-\[none\]::selection {
-  color: none;
-}
-
 .after\:absolute::after {
   content: var(--tw-content);
   position: absolute;
@@ -1275,11 +1284,6 @@ body {
   background-color: rgb(233 236 239 / var(--tw-bg-opacity));
 }
 
-.focus\:outline-none:focus {
-  outline: 2px solid transparent;
-  outline-offset: 2px;
-}
-
 .group:hover .group-hover\:visible {
   visibility: visible;
 }
@@ -1303,6 +1307,11 @@ body {
 .dark .dark\:bg-dark-container-3 {
   --tw-bg-opacity: 1;
   background-color: rgb(46 46 46 / var(--tw-bg-opacity));
+}
+
+.dark .dark\:bg-dark-primary-1 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(150 242 215 / var(--tw-bg-opacity));
 }
 
 .dark .dark\:text-dark-primary-1 {
@@ -1357,18 +1366,22 @@ body {
     grid-column: span 3 / span 3;
   }
 
-  .md\:my-0 {
-    margin-top: 0px;
-    margin-bottom: 0px;
-  }
-
   .md\:my-\[200px\] {
     margin-top: 200px;
     margin-bottom: 200px;
   }
 
+  .md\:my-0 {
+    margin-top: 0px;
+    margin-bottom: 0px;
+  }
+
   .md\:mt-14 {
     margin-top: 3.5rem;
+  }
+
+  .md\:flex {
+    display: flex;
   }
 
   .md\:hidden {
@@ -1397,10 +1410,6 @@ body {
 
   .md\:w-\[80\%\] {
     width: 80%;
-  }
-
-  .md\:cursor-pointer {
-    cursor: pointer;
   }
 
   .md\:columns-4 {
