--- a/styles/src.css
+++ b/styles/src.css
@@ -3,6 +3,13 @@
 @tailwind utilities;
 
 @font-face {
+  font-family: "inter";
+  src: url("/assets/fonts/Inter-Regular.ttf") format("truetype");
+  font-weight: normal;
+  font-style: normal;
+}
+
+@font-face {
   font-family: "calibre";
   src: url("/assets/fonts/CalibreBlack.otf") format("truetype");
   font-weight: normal;
@@ -39,6 +46,7 @@ body {
   @apply bg-light-bg-1 text-light-text-1;
   @apply dark:bg-dark-bg-1 dark:text-dark-text-1;
   @apply overflow-x-hidden;
+  @apply font-inter;
 }
 
 .navlink {
